# art3m1s-core

./: Cargo.toml  README.md  build.rs
examples/: window.rs
src/: ffi.rs  ffi_callbacks.rs  host_media.rs  lib.rs  pipeline.rs  runtime.rs  save.rs
src/audio/: engine.rs  mod.rs  rodio.rs  state.rs  stub.rs
src/backend/: mod.rs
src/backend/gl/: mod.rs  platform.rs  provider.rs  shader.rs
src/compositor/: anim.rs  build.rs  events.rs  mock.rs  mod.rs  props.rs  reduce.rs  renderer.rs  scene.rs  transition.rs
src/compositor/reduce/: hit_test.rs
src/render_pipeline/: draw.rs  mod.rs  shader.rs  transition.rs
src/runtime/: callbacks.rs  control.rs  events.rs  input.rs  magic_path.rs  media.rs  project.rs  render.rs  save_io.rs  script.rs  text.rs
src/text/: glyph.rs  inject.rs  mod.rs  render.rs  stub.rs
src/video/: engine.rs  ffmpeg.rs  mod.rs  state.rs  stub.rs
tests/: debug_parse.rs  gl_offscreen.rs  probe_boot.rs  probe_dialog_save_chain.rs  probe_full_boot_restore.rs  probe_game_entry.rs  probe_numbered_save.rs  probe_popfunc_backtoback.rs  probe_stop_queue_control_flow.rs  probe_sv_save_real.rs  probe_syssave_roundtrip.rs
